fix shell class loader issues; more work on text and cursors